# funnel

./: .buildinfo  .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  genindex.html  index.html  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
_sources/: index.md
_sources/examples/: lartillot.ipynb  linear_regression.ipynb  lvk.ipynb  lvk_injection.ipynb
docs/: _config.yml  _toc.yml  conf.py  example.ipynb  index.md  index.rst  reference.rst  requirements.txt
docs/examples/: analyical.py  analytical_1d.py  linear_regression.ipynb  linear_regression_fi_lnzs.csv  ln_z.py  lnz_comparison.ipynb  lvk.ipynb  lvk_gw150914_fi_lnzs.csv  lvk_gw150914_fi_lnzs_downsampled_posterior.csv  lvk_injection.ipynb
examples/: GW150914.html  analytical_test.html  lartillot.html  linear_regression.html  lnz_comparison.html  lvk.html  lvk_injection.html
src/funnel/: __init__.py  __main__.py  fi_core.py  logger.py  plotting.py  r_estimator.py  utils.py
studies/Rscripts/complete LISA PH/: FI_LISA.R
studies/Rscripts/simulation study 1(Lartillot)/: Fourier integral.R  IDR simulation study.R  ss_ti.R
studies/gwtc-results/: process_lvk_result.py
studies/nested_sampling_lartillot/: combine.py  combine_results.py  plot.py  plot_results.py  run_lartillot.py  slurm_100D.sh  slurm_1D.sh  slurm_20D.sh
tests/: __init__.py  bilby_fi_z_calc.py  lvk_fi_z_calc.py  plot_var.py  test_fi_z_calc.py  test_main.py
(+5 files in other folders)
