[tool.poetry]
name = "funnel"
version = "0.0.1"
description = "Funnel"
authors = ["Avi Vajpeyi <avi.vajpeyi@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/avivajpeyi/funnel"
repository = "https://github.com/avivajpeyi/funnel"
documentation = "https://funnel.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/avivajpeyi/funnel/releases"

[tool.poetry.dependencies]
python = "^3.9.1"
click = "^7.0"
tqdm = "^4.65.0"
pytest = "^7.4.0"
loguru = "^0.7.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
astropy = "^5.3.1"
jupyter = "^1.0.0"
lalsuite = "^7.16"
bilby = "^2.1.1"
pytest = "^7.4.0"
coverage = {extras = ["toml"], version = "^5.2"}
sphinx = "^3.1.2"
sphinx-autobuild = "^0.7.1"
pre-commit = "^3.3.3"
flake8 = "^3.8.3"
black = "^21.12b0"
bandit= "1.7.2"
flake8-bandit = "2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
darglint = "^1.5.1"
reorder-python-imports = "^2.3.1"
pre-commit-hooks = "^4.4.0"

[tool.poetry.scripts]
funnel = "funnel.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["funnel"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
